// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationScreen renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        collapsable={false}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        style={
                          Object {
                            "padding": 16,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              Object {
                                "borderRadius": 16,
                                "marginBottom": 16,
                              }
                            }
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "rgb(242, 242, 242)",
                                    "borderColor": "#bcbbc1",
                                    "flexDirection": "row",
                                    "padding": 14,
                                    "paddingLeft": 0,
                                    "paddingRight": 0,
                                  }
                                }
                                testID="padView"
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "flex-start",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                  theme={
                                    Object {
                                      "colors": Object {
                                        "black": "#242424",
                                        "disabled": "hsl(208, 8%, 90%)",
                                        "divider": "#bcbbc1",
                                        "error": "#ff190c",
                                        "grey0": "#393e42",
                                        "grey1": "#43484d",
                                        "grey2": "#5e6977",
                                        "grey3": "#86939e",
                                        "grey4": "#bdc6cf",
                                        "grey5": "#e1e8ee",
                                        "greyOutline": "#bbb",
                                        "platform": Object {
                                          "android": Object {
                                            "error": "#f44336",
                                            "grey": "rgba(0, 0, 0, 0.54)",
                                            "primary": "#2196f3",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#9C27B0",
                                            "success": "#4caf50",
                                            "warning": "#ffeb3b",
                                          },
                                          "default": Object {
                                            "error": "#ff3b30",
                                            "grey": "#7d7d7d",
                                            "primary": "#007aff",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#5856d6",
                                            "success": "#4cd964",
                                            "warning": "#ffcc00",
                                          },
                                          "ios": Object {
                                            "error": "#ff3b30",
                                            "grey": "#7d7d7d",
                                            "primary": "#007aff",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#5856d6",
                                            "success": "#4cd964",
                                            "warning": "#ffcc00",
                                          },
                                          "web": Object {
                                            "error": "#ff190c",
                                            "grey": "#393e42",
                                            "primary": "#2089dc",
                                            "searchBg": "#303337",
                                            "secondary": "#ca71eb",
                                            "success": "#52c41a",
                                            "warning": "#faad14",
                                          },
                                        },
                                        "primary": "#2089dc",
                                        "searchBg": "#303337",
                                        "secondary": "#ca71eb",
                                        "success": "#52c41a",
                                        "warning": "#faad14",
                                        "white": "#ffffff",
                                      },
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "#000",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "lineHeight": 26,
                                        "textAlign": "left",
                                      }
                                    }
                                    testID="listItemTitle"
                                  >
                                    Notifications
                                  </Text>
                                </View>
                                <View
                                  style={
                                    Object {
                                      "paddingLeft": 16,
                                    }
                                  }
                                />
                                <View
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotate": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <View>
                                      <View
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "backgroundColor": "transparent",
                                            "justifyContent": "center",
                                          }
                                        }
                                      >
                                        <Text />
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "maxHeight": "0%",
                                  "opacity": 0,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#fff",
                                    },
                                    Object {
                                      "borderTopLeftRadius": 16,
                                      "borderTopRightRadius": 16,
                                    },
                                    Object {
                                      "borderBottomLeftRadius": 16,
                                      "borderBottomRightRadius": 16,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "#fff",
                                      "borderBottomLeftRadius": 16,
                                      "borderBottomRightRadius": 16,
                                      "borderColor": "#bcbbc1",
                                      "borderTopLeftRadius": 16,
                                      "borderTopRightRadius": 16,
                                      "flexDirection": "row",
                                      "padding": 14,
                                    }
                                  }
                                  testID="padView"
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginRight": 16,
                                      }
                                    }
                                  >
                                    <View>
                                      {"name":"ios-eye","size":25,"color":"#000"}
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      Object {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      Object {
                                        "colors": Object {
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": Object {
                                            "android": Object {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": Object {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": Object {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": Object {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ca71eb",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      style={
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      another notification
                                    </Text>
                                    <Text
                                      style={
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#242424",
                                          "fontSize": 16,
                                          "lineHeight": 20,
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      <time
                                        dateTime="1970-01-01T00:00:01.000Z"
                                        title="1970-01-01 00:00"
                                      >
                                        51 years ago
                                      </time>
                                    </Text>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "rgb(242, 242, 242)",
                                    "borderColor": "#bcbbc1",
                                    "flexDirection": "row",
                                    "padding": 14,
                                    "paddingLeft": 0,
                                    "paddingRight": 0,
                                  }
                                }
                                testID="padView"
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "flex-start",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                  theme={
                                    Object {
                                      "colors": Object {
                                        "black": "#242424",
                                        "disabled": "hsl(208, 8%, 90%)",
                                        "divider": "#bcbbc1",
                                        "error": "#ff190c",
                                        "grey0": "#393e42",
                                        "grey1": "#43484d",
                                        "grey2": "#5e6977",
                                        "grey3": "#86939e",
                                        "grey4": "#bdc6cf",
                                        "grey5": "#e1e8ee",
                                        "greyOutline": "#bbb",
                                        "platform": Object {
                                          "android": Object {
                                            "error": "#f44336",
                                            "grey": "rgba(0, 0, 0, 0.54)",
                                            "primary": "#2196f3",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#9C27B0",
                                            "success": "#4caf50",
                                            "warning": "#ffeb3b",
                                          },
                                          "default": Object {
                                            "error": "#ff3b30",
                                            "grey": "#7d7d7d",
                                            "primary": "#007aff",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#5856d6",
                                            "success": "#4cd964",
                                            "warning": "#ffcc00",
                                          },
                                          "ios": Object {
                                            "error": "#ff3b30",
                                            "grey": "#7d7d7d",
                                            "primary": "#007aff",
                                            "searchBg": "#dcdce1",
                                            "secondary": "#5856d6",
                                            "success": "#4cd964",
                                            "warning": "#ffcc00",
                                          },
                                          "web": Object {
                                            "error": "#ff190c",
                                            "grey": "#393e42",
                                            "primary": "#2089dc",
                                            "searchBg": "#303337",
                                            "secondary": "#ca71eb",
                                            "success": "#52c41a",
                                            "warning": "#faad14",
                                          },
                                        },
                                        "primary": "#2089dc",
                                        "searchBg": "#303337",
                                        "secondary": "#ca71eb",
                                        "success": "#52c41a",
                                        "warning": "#faad14",
                                        "white": "#ffffff",
                                      },
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Object {
                                        "backgroundColor": "transparent",
                                        "color": "#000",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "lineHeight": 26,
                                        "textAlign": "left",
                                      }
                                    }
                                    testID="listItemTitle"
                                  >
                                    Read Notifications
                                  </Text>
                                </View>
                                <View
                                  style={
                                    Object {
                                      "paddingLeft": 16,
                                    }
                                  }
                                />
                                <View
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotate": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <View>
                                      <View
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "backgroundColor": "transparent",
                                            "justifyContent": "center",
                                          }
                                        }
                                      >
                                        <Text />
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "maxHeight": "0%",
                                  "opacity": 0,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#fff",
                                    },
                                    Object {
                                      "borderTopLeftRadius": 16,
                                      "borderTopRightRadius": 16,
                                    },
                                    Object {
                                      "borderBottomLeftRadius": 16,
                                      "borderBottomRightRadius": 16,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "#fff",
                                      "borderBottomLeftRadius": 16,
                                      "borderBottomRightRadius": 16,
                                      "borderColor": "#bcbbc1",
                                      "borderTopLeftRadius": 16,
                                      "borderTopRightRadius": 16,
                                      "flexDirection": "row",
                                      "padding": 14,
                                    }
                                  }
                                  testID="padView"
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginRight": 16,
                                      }
                                    }
                                  >
                                    <View>
                                      {"name":"ios-eye","size":25,"color":"#000"}
                                    </View>
                                  </View>
                                  <View
                                    style={
                                      Object {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      Object {
                                        "colors": Object {
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": Object {
                                            "android": Object {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": Object {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": Object {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": Object {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ca71eb",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      style={
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      a notification
                                    </Text>
                                    <Text
                                      style={
                                        Object {
                                          "backgroundColor": "transparent",
                                          "color": "#242424",
                                          "fontSize": 16,
                                          "lineHeight": 20,
                                        }
                                      }
                                      testID="listItemTitle"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`NotificationScreenRightHeader renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                      >
                        <RNGestureHandlerButton
                          collapsable={false}
                          onGestureEvent={[Function]}
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          onHandlerStateChange={[Function]}
                          rippleColor={0}
                        >
                          <View
                            accessible={true}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                          >
                            <View>
                              {"name":"ios-ellipsis-horizontal","size":25,"color":"#8E8E8E"}
                            </View>
                          </View>
                        </RNGestureHandlerButton>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
